# fastapi-tortoise

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  .flake8  aerich.ini  prestart.sh
app/app/: main.py
app/app/api/: routes.py
app/app/controllers/: login.py  opinions.py  status.py  users.py
app/app/controllers/dependencies/: security.py
app/app/core/: config.py  db.py  initializer.py  security.py
app/app/models/: __init__.py  base.py  like.py  opinion.py  user.py
app/app/repositories/: __init__.py  base.py  like.py  opinion.py  user.py
app/app/schemas/: __init__.py  like.py  message.py  opinion.py  user.py
app/app/services/: __init__.py  base.py  like.py  opinion.py  user.py
app/app/test/: conftest.py
app/app/test/api/: test_status.py
app/app/test/repositories/: test_users.py
app/app/test/services/: test_users.py
app/app/test/utils/: user.py  utils.py
